--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <ion-app>
   <ion-menu side="end" contentId="mainMenu">
     <ion-header>
-      <ion-toolbar>
-        <ion-title class="ion-text-center header" routerLink="./home">
+      <ion-toolbar style="--min-height:100px">
+        <ion-title style="min-height:100px" class="ion-text-center header" routerLink="./home">
           TravelPack
           <ion-avatar class="logo">
             <img src="../../../assets/icon/Logo.png">
