--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -1,5 +1,5 @@
 <div class="publicacion-wrapper" *ngFor="let publicacion of publicaciones.value">
-  <ion-row class="wrapper" *ngIf="publicacion.tipo.tipo != 'mapa'">
+  <ion-row class="wrapper">
     <ion-card class="card">
       <ion-col *ngIf="userFire.id == usuario.value.idPersona" class="edit-publicacion" size="1">
         <ion-icon class="edit-publicacion-icon" (click)="presentPopover( $event, publicacion )" name="ellipsis-horizontal-circle-outline"></ion-icon>
@@ -29,9 +29,9 @@
             <div *ngIf="publicacion.tipo.tipo === 'foto'">
               <img id="foto" src="{{publicacion.contenido}}">
             </div>
-            <!-- <div *ngIf="publicacion.tipo.tipo === 'mapa'">
-              <app-pub-mapa-ee [publicacion] = "publicacion"></app-pub-mapa-ee>
-            </div> -->
+            <div style="text-align:center" *ngIf="publicacion.tipo.tipo === 'mapa'">
+              <img [src]="obtenerUbicacion(publicacion)" alt="Mapa"/>
+            </div> 
             <div *ngIf="publicacion.tipo.tipo === 'enlaceExterno'">
               <app-pub-mapa-ee [publicacion] = "publicacion"></app-pub-mapa-ee>
             </div>
