--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -42,7 +42,7 @@
                 </ion-col>
               </ion-row>
 
-              <ion-list class="form-input">
+              <ion-list class="form-input" style="    margin-top: 30px;">
                 <ion-item>
                   <!-- <ion-input type="email" placeholder="Email" #txtEmail></ion-input> -->
                   <ion-label position="floating">Email</ion-label>
