--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.html
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.html
@@ -38,11 +38,14 @@
                     <ion-card-content [innerHtml]="preview.description"></ion-card-content>
                   </ion-card>
                 </div>
+                <div *ngIf="boolEsMapa">
+                  <img [src]="obtenerUbicacion(publicacion)" alt="Mapa"/>
+                </div>
               </ion-col>
             </ion-row>
             <ion-row class="ion-justify-content-start">
               <ion-col size="12">
-                <ion-card class="card" *ngIf="boolEsTexto || boolEsFoto || boolEsEnlace">
+                <ion-card class="card">
                   <ion-button (click)="reaccionarAPublicacion('MeGusta')" fill="clear" size="small">
                     <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
                     {{cantReacciones.cantidadLikes}}
