Arreglos de Bloquear y Desbloquear Usuario

--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -15,7 +15,7 @@
               <ion-item-divider>
               </ion-item-divider>
               <ion-list>
-                <ion-item *ngFor="let usuario of usuarios" >
+                <ion-item *ngFor="let usuario of bsUsuarios.value" >
                   <ion-avatar style="padding-right: 7px;">
                     <ion-img [src]="usuario.imagenPerfil"></ion-img>
                   </ion-avatar>
