fix logo inicio sesion

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,7 +4,7 @@
     <ion-grid class="ion-no-padding">
       <ion-row>
         <div style="height: 100vh; background-size: cover; position: absolute; opacity: 0.7;">
-          <ion-img src="../../assets/img/login.jpg" style="height: 100vh; object-fit: cover;"></ion-img>
+          <ion-img src="../../assets/img/login.png" style="width: 30rem;"></ion-img>
         </div>
           <ion-col size-lg="5" size-md="7" size-sm="8" size-xs="10">
             <div class="test">
