--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -19,7 +19,7 @@ ion-card-title{
 }
 .background
 {
-  background-image: "../../assets/img/login.jpg";
+  background-image: "../../assets/img/login.png";
   background-size: cover;
   background-repeat: no-repeat;
 }
