Corrección publicación mapa

--- a/src/app/UI/alta-publicacion/alta-publicacion.component.html
+++ b/src/app/UI/alta-publicacion/alta-publicacion.component.html
@@ -32,7 +32,7 @@
     <!-- Link externo -->
     <img src="../../assets/icon/link-outline.svg" />
   </ion-avatar>
-  <ion-avatar class="ubicacion-icon" (click)="modalUbicacion()">
+  <ion-avatar class="ubicacion-icon" (click)="modalMapaComponent()">
     <!-- Ubicacion -->
     <img src="../../assets/icon/location-outline.svg" />
   </ion-avatar>
