--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <ion-avatar class="logo">
             <img src="../../../assets/icon/Logo.png">
           </ion-avatar>
-        </ion-title>        
+        </ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -16,25 +16,25 @@
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="./listar-contactos">
             <ion-icon name="people-outline" slot="start"></ion-icon>
-            <ion-label>Mis Contactos</ion-label>
+            <ion-label>Contactos</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="./intereses-usuario-comun">
             <ion-icon name="earth-outline" slot="start"></ion-icon>
-            <ion-label>Mis Intereses</ion-label>
+            <ion-label>Intereses</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="./eventos">
             <ion-icon name="airplane-outline" slot="start"></ion-icon>
-            <ion-label>Mis Eventos</ion-label>
+            <ion-label>Eventos</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item lines="none" button (click)="goToGallery()">
             <ion-icon name="images-outline" slot="start"></ion-icon>
-            <ion-label>Mi Galeria</ion-label>
+            <ion-label>Galeria</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
@@ -52,7 +52,7 @@
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="./chat">
             <ion-icon name="chatbubble-ellipses-outline" slot="start"></ion-icon>
-            <ion-label>Mis Chats</ion-label>
+            <ion-label>Chats</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
