--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -4,7 +4,7 @@
 
   <ion-card class="chat-card">
     <ion-card-header color=tertiary style="background:#022833">
-      <ion-card-title  class="ion-text-center header" *ngIf="!chatting">Mis Chats</ion-card-title>
+      <ion-card-title  class="ion-text-center header" *ngIf="!chatting">CHATS</ion-card-title>
       <ion-card-title  class="ion-text-center header" *ngIf="chatting && currentChatroom">{{ getChatroomName(currentChatroom) }}</ion-card-title>
     </ion-card-header>
       <ion-grid *ngIf="chatting">
