--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -40,7 +40,7 @@
                       <ion-col>
                         <div style="display: flex; justify-content: space-around; margin: 10px 0;">
                           <ion-button fill="outline" type= "submit" [disabled]="!f.valid" style="width: 120px;">
-                            Login
+                            Iniciar Sesión
                           </ion-button>
                           <ion-button fill="outline" routerLink="/registro">
                             Registro
