--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -25,10 +25,10 @@ ion-input::placeholder {
   }
 }
 
-ion-row{
-  display: flex;
-  justify-content: center;
-}
+// ion-row{
+//   display: flex;
+//   justify-content: center;
+// }
 
 .text-header{
   font-family: 'big_noodle_titling';
