--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -147,7 +147,7 @@
         </ion-col>
       </ion-row>
       <ion-row *ngIf="activeTab=='publicaciones'">
-        <app-alta-publicacion style="min-width: 100%;" *ngIf="activeTab=='publicaciones'" [evento] = "true"></app-alta-publicacion>
+        <app-alta-publicacion style="min-width: 100%;" *ngIf="activeTab=='publicaciones'" [evento] = "true" (myEvent)="nuevaPub($event)"></app-alta-publicacion>
           <ion-col style="min-width: 60%;" offset-md="3" sizeMd="5" sizeSm="12">
           <div *ngFor="let publicacion of publicaciones">
             <ion-row class="wrapper" *ngIf="publicacion.tipo.tipo != 'mapa'">
@@ -177,7 +177,7 @@
                   </ion-col>
                 </ion-row>
                 <ion-row class="ion-justify-content-start">
-                  <ion-button style="display: block;margin-left: auto;" href="/comentarios-publicacion/{{publicacion.idPublicacion}}" color="dark" fill="clear" shape="round">
+                  <ion-button style="display: block;margin-left: auto;" href="/comentarios-publicacion/{{publicacion.idPublicacion}}" color="dark" fill="clear" shape="round" (click)="cargoPublicacion(publicacion)">
                     Ver más 
                     <ion-icon name="arrow-redo-outline"></ion-icon>
                   </ion-button>
@@ -196,14 +196,6 @@
             </ion-infinite-scroll-content>
           </ion-infinite-scroll>
         </ion-col>
-        <!-- <ion-col *ngIf="!evento.publicaciones || evento.publicaciones.length == 0" style="text-align:center">
-          <span style="margin: 10px;">No hay publicaciones en el evento</span>
-        </ion-col>
-        <ion-col *ngIf="evento.publicaciones && evento.publicaciones.length > 0">
-          <ion-item class="lstParticipantes pointer" *ngFor="let publicacion of evento.publicaciones" >
-            <img [src]="publicacion.imagen" class="thumbnail" /> {{ publicacion.nombre }} {{ publicacion.contenido }}
-          </ion-item>
-        </ion-col> -->
       </ion-row>
     </ion-grid>
     </ion-card>
