--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -28,6 +28,12 @@
         <ion-icon slot="end" *ngIf="!evento.owner && evento.estadoSolicitud == 'aceptada'" name="exit-outline" (click)="eliminarAlert(evento, false)" class="pointer"></ion-icon>
       </ion-item>
     </ion-list>
+    <ion-card>
+      <ion-card-content style="background-color: white;" *ngIf="bsEventos.value.length == 0">
+        <img style="height: 15rem; margin-left: auto;margin-right: auto; display: block;" src="../../assets/img/lobito.png">
+        <ion-label style="text-align: center; display: block;">Aún no tienes eventos :(</ion-label>
+      </ion-card-content>
+    </ion-card>
   </ion-card>
 </ion-content>
 <ion-footer class="mobile-style">
