arreglos visuales comentarios

--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
@@ -36,7 +36,7 @@
   .wrapper {
     border-bottom: 1px solid var(--ion-color-light);
     background: white;
-    margin-bottom: 15px;
+    //margin-bottom: 15px;
     border-radius: 10px;
   }
 
