--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.html
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.html
@@ -39,7 +39,7 @@
                   </ion-card>
                 </div>
                 <div *ngIf="boolEsMapa">
-                  <img [src]="obtenerUbicacion(publicacion)" alt="Mapa"/>
+                  <img [src]="obtenerUbicacion(publicacion)" alt="Mapa" />
                 </div>
               </ion-col>
             </ion-row>
@@ -50,7 +50,7 @@
                     <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
                     {{cantReacciones.cantidadLikes}}
                   </ion-button>
-    
+
                   <ion-button (click)="reaccionarAPublicacion('NoMeGusta')" fill="clear" size="small">
                     <ion-icon name="thumbs-down-outline" slot="start"></ion-icon>
                     {{cantReacciones.cantidadDislikes}}
@@ -60,85 +60,88 @@
             </ion-row>
           </ion-col>
         </ion-row>
-      
-    
-    <ion-row>
-      <ion-col size="12">
 
-        <!-- AGREGAR COMENTARIO -->
 
-        <ion-card style="background-color: white;">
-          <ion-card-content>
-            <form [formGroup]="comentarioForm" (ngSubmit)="aniadirComentarioAPublicacion()">
-              <ion-item>
-                <ion-textarea placeholder="Comenta algo" required formControlName="comentario" type="text">
-                </ion-textarea>
-              </ion-item>
-              <ion-button style="float: right;" block color="primary" type="submit" [disabled]="comentarioForm.invalid">
-                Comentar
-              </ion-button>
-            </form>
-          </ion-card-content>
-        </ion-card>
+        <ion-row>
+          <ion-col size="12">
 
+            <!-- AGREGAR COMENTARIO -->
+
+            <ion-card style="background-color: white; margin: auto;">
+              <ion-card-content>
+                <form [formGroup]="comentarioForm" (ngSubmit)="aniadirComentarioAPublicacion()">
+                  <ion-item>
+                    <ion-textarea placeholder="Comenta algo" required formControlName="comentario" type="text">
+                    </ion-textarea>
+                  </ion-item>
+                  <ion-button style="float: right;" block color="primary" type="submit"
+                    [disabled]="comentarioForm.invalid">
+                    Comentar
+                  </ion-button>
+                </form>
+              </ion-card-content>
+            </ion-card>
+
+          </ion-col>
+          <!-- </ion-row>
+    <ion-row> -->
+          <ion-col size="12">
+
+            <!-- COMENTARIOS  -->
+            <ion-card class="card" *ngIf="boolVerComentarios">
+              <ion-card-header>
+                <ion-card-title>Comentarios:</ion-card-title>
+              </ion-card-header>
+              <ion-list>
+                <ion-item *ngFor="let comentario of comentariosReaccionesObs | async">
+                  <ion-grid fixed>
+                    <ion-row>
+                      <ion-col size="10">
+                        <ion-label text-wrap *ngIf="comentario.idComentarioPadre === null"> {{ comentario.contenido }}
+                        </ion-label>
+                        <ion-label text-wrap style="padding-left: 8%;" *ngIf="comentario.idComentarioPadre !== null"> {{
+                          comentario.contenido }} </ion-label>
+                      </ion-col>
+                      <ion-col size="2">
+                        <ion-icon class="edit-publicacion-icon" (click)="presentPopover( $event, comentario )"
+                          name="ellipsis-horizontal-circle-outline"></ion-icon>
+                      </ion-col>
+
+                    </ion-row>
+                    <ion-row>
+                      <ion-col size="12">
+                        <ion-button (click)="reaccionarComentario(comentario, 'MeGusta')" fill="clear" size="small">
+                          <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
+                          {{comentario.cantidadLikes}}
+                        </ion-button>
+
+                        <ion-button (click)="reaccionarComentario(comentario, 'NoMeGusta')" fill="clear" size="small">
+                          <ion-icon name="thumbs-down-outline" slot="start"></ion-icon>
+                          {{comentario.cantidadDislikes}}
+                        </ion-button>
+
+                        <ion-button (click)="aniadirComentarioAComentario(comentario)" fill="clear" size="small"
+                          *ngIf="comentario.idComentarioPadre === null">
+                          <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
+                          {{comentario.comentariosHijos.length}}
+                        </ion-button>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
+              </ion-list>
+              <ion-card>
+                <ion-card-content style="background-color: white;" *ngIf="cantReacciones?.cantidadComentarios == 0">
+                  <img style="height: 15rem; margin-left: auto;margin-right: auto; display: block;"
+                    src="../../assets/img/lobito.png">
+                  <ion-label style="text-align: center; display: block;">Aún no hay comentarios :(</ion-label>
+                </ion-card-content>
+              </ion-card>
+            </ion-card>
+          </ion-col>
+        </ion-row>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="12">
-
-        <!-- COMENTARIOS  -->
-        <ion-card class="card" *ngIf="boolVerComentarios">
-          <ion-card-header>Comentarios:</ion-card-header>
-          <ion-list>
-            <ion-item *ngFor="let comentario of comentariosReaccionesObs | async">
-              <ion-grid fixed>
-                <ion-row>
-                  <ion-col size="10">
-                    <ion-label text-wrap *ngIf="comentario.idComentarioPadre === null"> {{ comentario.contenido }}
-                    </ion-label>
-                    <ion-label text-wrap style="padding-left: 8%;" *ngIf="comentario.idComentarioPadre !== null"> {{
-                      comentario.contenido }} </ion-label>
-                  </ion-col>
-                  <ion-col size="2">
-                    <ion-icon class="edit-publicacion-icon" (click)="presentPopover( $event, comentario )"
-                      name="ellipsis-horizontal-circle-outline"></ion-icon>
-                  </ion-col>
-
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-button (click)="reaccionarComentario(comentario, 'MeGusta')" fill="clear" size="small">
-                      <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
-                      {{comentario.cantidadLikes}}
-                    </ion-button>
-
-                    <ion-button (click)="reaccionarComentario(comentario, 'NoMeGusta')" fill="clear" size="small">
-                      <ion-icon name="thumbs-down-outline" slot="start"></ion-icon>
-                      {{comentario.cantidadDislikes}}
-                    </ion-button>
-
-                    <ion-button (click)="aniadirComentarioAComentario(comentario)" fill="clear" size="small"
-                      *ngIf="comentario.idComentarioPadre === null">
-                      <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
-                      {{comentario.comentariosHijos.length}}
-                    </ion-button>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </ion-item>
-          </ion-list>
-        </ion-card>
-
-      </ion-col>
-    </ion-row>
-    <ion-card>
-      <ion-card-content style="background-color: white;" *ngIf="cantReacciones?.cantidadComentarios == 0">
-        <img style="height: 15rem; margin-left: auto;margin-right: auto; display: block;" src="../../assets/img/lobito.png">
-        <ion-label style="text-align: center; display: block;">Aún no hay comentarios :(</ion-label>
-      </ion-card-content>
-    </ion-card>
-  </ion-col>
-</ion-row>
   </ion-grid>
   
 
