--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-tabs>
       <ion-tab-bar slot="bottom" class="tabsClass">
         <ion-tab-button tab="emailNotifications">
@@ -11,16 +11,15 @@
         <ion-tab-button tab="pushNotifications">
           <ion-icon name="notifications-circle"></ion-icon>
           <ion-label>PUSH</ion-label>
-        </ion-tab-button>
+        </ion-tab-button> 
 
 
       </ion-tab-bar>
     </ion-tabs>
-
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
