--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             </ion-buttons>
             <ion-buttons  routerLink = "/home" class="logo">
               <ion-item lines="none">
-                <ion-avatar class="test">
+                <ion-avatar class="logo">
                   <img src="../../../assets/icon/Logo.png">
                 </ion-avatar>
               </ion-item>
