--- a/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
+++ b/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
@@ -3,7 +3,7 @@
 <ion-grid>
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
-      <ion-card style="background: white">
+      <ion-card class="solicitudes-card">
         <ion-card-header color=tertiary style="background:#022833">
           <ion-card-title  class="ion-text-center header">Solicitudes Pendientes</ion-card-title>
         </ion-card-header>
@@ -42,8 +42,8 @@
   </ion-row>
 </ion-grid>
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
