--- a/src/app/UI/tab-email-notificacion/tab-email-notificacion.page.html
+++ b/src/app/UI/tab-email-notificacion/tab-email-notificacion.page.html
@@ -1,8 +1,9 @@
+<app-navbar></app-navbar>
 <ion-content>
     <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3" >
-          <ion-card style="background: white">
+          <ion-card class="notificaciones-card" >
             <ion-card-header color=tertiary style="background:#022833">
               <ion-card-title  class="ion-text-center header">Configuración de Notificaciones por Email</ion-card-title>
             </ion-card-header>
@@ -23,3 +24,8 @@
     </ion-grid>
 
 </ion-content>
+<ion-footer style="height: 28px;" class="mobile-style">
+  <ion-toolbar>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
