--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" routerLink="./configuracion-notificaciones">
+          <ion-item lines="none" routerLink="./tab-email-notificacion">
             <ion-icon name="notifications-circle-outline" slot="start"></ion-icon>
             <ion-label>Configurar Notificaciones</ion-label>
           </ion-item>
