--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<ion-content>
+<ion-content class="ion-padding">
   <ion-card class="card-eventos">
     <ion-card-header color=tertiary style="background:#022833">
       <ion-card-title  class="ion-text-center header">Mis Eventos</ion-card-title>
@@ -30,8 +30,8 @@
     </ion-list>
   </ion-card>
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
