--- a/src/app/galeria/galeria.page.html
+++ b/src/app/galeria/galeria.page.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<ion-content>
-  <ion-card *ngIf="!isLoading" style="background:white">
+<ion-content class="ion-padding">
+  <ion-card *ngIf="!isLoading" class="card-galeria">
     <ion-card-header color=tertiary style="display: flex; align-content: center; align-items: center;background:#022833">
       <ion-buttons style="float: left; align-self: center;">
         <ion-back-button  class="pointer" text=""></ion-back-button>
@@ -21,8 +21,8 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
