--- a/src/app/listar-contactos/listar-contactos.page.html
+++ b/src/app/listar-contactos/listar-contactos.page.html
@@ -3,7 +3,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-card style="background-color:white">
+        <ion-card class="contactos-card">
           <ion-card-header color=tertiary style="background:#022833">
             <ion-card-title  class="ion-text-center header">Contactos</ion-card-title>
           </ion-card-header>
@@ -44,8 +44,8 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
