--- a/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.scss
+++ b/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.scss
@@ -2,8 +2,18 @@
     font-family: "big_noodle_titling";
     font-size: 25px;
 }
+.solicitudes-card {
+  background-color:white; 
+  width: 50em;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
 @media (max-width: 600px){
     .mobile-style{
       display:none;
+    }
+    .solicitudes-card{
+      width: 100%;
     }
   }
