--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -18,12 +18,16 @@
 
 .chat-card{
   background:white;
-  width: 50%;
+  width: 55em;
   margin: 0 auto;
+  margin-top: 20px;
 }
 @media (max-width: 600px){
   .mobile-style{
     display:none;
+  }
+  .chat-card{
+    width: 100%;
   }
 }
 
