--- a/src/app/galeria/galeria.page.scss
+++ b/src/app/galeria/galeria.page.scss
@@ -3,6 +3,13 @@
 
 }
 
+.card-galeria{
+  background:white; 
+  width: 55em;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
 .header{
     font-family: "big_noodle_titling";
     font-size: 25px;
@@ -17,5 +24,8 @@
 @media (max-width: 600px){
     .mobile-style{
       display:none;
+    }
+    .card-galeria{
+      width:100%;
     }
   }
