--- a/src/app/interes/interes.page.html
+++ b/src/app/interes/interes.page.html
@@ -1,8 +1,8 @@
-<ion-content style="padding-top: 10px">
+<ion-content style="padding-top: 10px;">
   <ion-grid style="margin-top: 10px">
     <ion-row>
       <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-card style="background-color:white;">
+        <ion-card style="background-color:white; ">
           <ion-card-header color=tertiary style="background:#022833">
             <ion-card-title  class="ion-text-center header">Intereses</ion-card-title>
           </ion-card-header>
