--- a/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
+++ b/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
-<ion-content>
+<ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-card style="background-color:white">
+      <ion-col>
+        <ion-card class="intereses-card" >
           <ion-card-header color=tertiary style="background:#022833">
             <ion-card-title  class="ion-text-center header">Intereses</ion-card-title>
           </ion-card-header>
@@ -29,8 +29,8 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
