--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -13,8 +13,8 @@
 </ion-grid>
 
 </ion-content>
-<ion-footer class="mobile-style">
+<ion-footer style="height: 28px;" class="mobile-style">
   <ion-toolbar>
-    <ion-title>TravelPack © 2021</ion-title>
+    <ion-title style="padding-bottom: 22px; font-size: 16px;">TravelPack © 2021</ion-title>
   </ion-toolbar>
 </ion-footer>
