arreglo like pub

--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.html
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.html
@@ -45,7 +45,7 @@
             </ion-row>
             <ion-row class="ion-justify-content-start">
               <ion-col size="12">
-                <ion-card class="card">
+                <!-- <ion-card> -->
                   <ion-button (click)="reaccionarAPublicacion('MeGusta')" fill="clear" size="small">
                     <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
                     {{cantReacciones.cantidadLikes}}
@@ -55,7 +55,7 @@
                     <ion-icon name="thumbs-down-outline" slot="start"></ion-icon>
                     {{cantReacciones.cantidadDislikes}}
                   </ion-button>
-                </ion-card>
+                <!-- </ion-card> -->
               </ion-col>
             </ion-row>
           </ion-col>
