--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -7,7 +7,7 @@
         <ion-card-title  class="ion-text-center header"> {{ editando ? 'Editar' : 'Alta' }} evento</ion-card-title>
       </ion-card-header>
       <div style="margin-left: 10px;">
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Nombre</ion-label>
           </ion-col>
@@ -15,7 +15,7 @@
             <ion-input type="text" [(ngModel)]="evento.nombre" placeholder="Ej: Recorrido por la ciudad"></ion-input>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Descripción</ion-label>
           </ion-col>
@@ -24,7 +24,7 @@
             </ion-textarea>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header" >Imagen</ion-label>
           </ion-col>
@@ -34,7 +34,7 @@
               <input type="file" id="fileInput" (change)="uploadFile($event)" class="ion-hide" accept="image/*"/>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Ubicación</ion-label>
           </ion-col>
@@ -42,7 +42,7 @@
             <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="true" [buscador]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Inicio</ion-label>
           </ion-col>
@@ -54,7 +54,7 @@
             <ion-icon name="calendar-outline" size="large" (click)="pickerInicio.open()"></ion-icon>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Fin</ion-label>
           </ion-col>
@@ -66,7 +66,7 @@
             <ion-icon name="calendar-outline" size="large" (click)="pickerFin.open()"></ion-icon>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="4" size-md="2" size-xs="12">
             <ion-label class="text-header">Invitados</ion-label>
           </ion-col>
@@ -84,7 +84,7 @@
             </ion-item>
           </ion-list>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col *ngIf="participantes.value && participantes.value.length > 0">
             <ion-item class="lstParticipantes pointer" *ngFor="let invitado of participantes.value" >
               <img [src]="invitado.imagenPerfil" class="thumbnail ml-2" /> {{ invitado.nombre }} {{ invitado.apellido }}
@@ -92,7 +92,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row style="display: flex; justify-content: center;">
           <ion-col size="2"></ion-col>
           <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
             <ion-button expand="block" style="--background:#3f83a8" [disabled]="!isValid()" (click)="submit()">Aceptar</ion-button>
