--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
@@ -14,6 +14,13 @@
     margin-bottom: 0px;
   }
 
+  .handle {
+    padding-left: 4px;
+    color: var(--ion-color-medium);
+    font-family: Gotham;
+    font-size: 18px;
+  }
+
   .inner-text{
     margin:20px;
     display:block;    
