--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.html
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.html
@@ -93,6 +93,9 @@
               <ion-grid fixed>
                 <ion-row>
                   <ion-col size="10">
+                    <ion-label class="handle">
+                      @{{comentario.nickname}}
+                    </ion-label>
                     <ion-label text-wrap *ngIf="comentario.idComentarioPadre === null"> {{ comentario.contenido }}
                     </ion-label>
                     <ion-label text-wrap style="padding-left: 8%;" *ngIf="comentario.idComentarioPadre !== null"> {{
