--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
         <app-alta-publicacion [evento] = "false" (myEvent)="nuevaPub($event)"></app-alta-publicacion>
       </ion-col>
       <ion-col sizeSm="3" size="12" >
-        <ion-card style="background:white">
+        <ion-card class="card-sugerencias" >
           <ion-row>
 
             <ion-col size-sm="8">
