--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,7 @@
           <ion-col size-lg="5" size-md="7" size-sm="8" size-xs="10">
             <div class="test">
               <ion-card style="max-width: 550px; flex-grow: 1; margin-top: 200px; background-color:white">
-                <ion-card-content>
+                <ion-card-content class="card-login">
                   <ion-card-title style="font-family: 'big_noodle_titling'; font-size:25px;">TravelPack</ion-card-title>
                   <ion-list class="form-input">
                     <ion-item>
