--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -132,6 +132,7 @@ ion-item::part(native) {
   background: white;
   margin-bottom: 15px;
   border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .tweet-info {
