--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.html
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.html
@@ -65,7 +65,7 @@
 
         <!-- AGREGAR COMENTARIO -->
 
-        <ion-card style="background-color: white; margin: auto;">
+        <ion-card class="comentar-box" >
           <ion-card-content>
               <ion-item>
                 <ion-input type="text" id="input-reason" [(ngModel)]="comentarioDeForm" placeholder="Comenta algo"></ion-input>
@@ -83,13 +83,8 @@
 
         <!-- COMENTARIOS  -->
         <ion-card class="card" *ngIf="boolVerComentarios">
-          <ion-card-header>
-            <ion-card-title>
-              Comentarios:
-            </ion-card-title>
-          </ion-card-header>
-          <ion-list>
-            <ion-item *ngFor="let comentario of comentariosReaccionesObs | async">
+          <ion-list >
+            <ion-item [class]="getClase(comentario)" *ngFor="let comentario of comentariosReaccionesObs | async">
               <ion-grid fixed>
                 <ion-row>
                   <ion-col size="10">
