--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
@@ -1,8 +1,8 @@
 .card{
-    background: white;
     min-width: 100%;
     margin-left: 0px;
     position:relative;
+    box-shadow: none;
   }
 
   .card-text{
@@ -12,6 +12,28 @@
     margin: 15px;
     margin-left: 0;
     margin-bottom: 0px;
+  }
+
+  .comentar-box{
+    background-color: white; margin: auto; box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+
+  .wrapper{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+
+  .child {
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
+    background: white;
+    border-radius: 10px;
+    width: 83%;
+    margin-left: 92px;
+  }
+
+  .padre {
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
+    background: white;
+    border-radius: 10px;
   }
 
   .handle {
@@ -34,6 +56,9 @@
   @media (max-width: 600px){
     .mobile-style{
       display:none;
+    }
+    .child{
+      width: 75%;
     }
   }
   .reacciones{
