--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,14 +13,17 @@
   line-height: 26px;
 }
 
+.card-sugerencias{
+  background:white;box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
 .sugerencias-header{
   font-family: 'big_noodle_titling';
   font-size: 25px;
   color:#212211;
 }
 .publicacion-wrap{
-  border: 1px solid #022833;
-   border-radius: 4px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 @media (max-width: 600px){
   .mobile-style{
