--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -152,8 +152,8 @@
           <div *ngFor="let publicacion of publicaciones">
             <ion-row class="wrapper" *ngIf="publicacion.tipo.tipo != 'mapa'">
               <ion-col size="2">
-                <ion-avatar>
-                  <ion-img routerLink="/perfil/{{publicacion.idPersona}}" [src]=publicacion.imagenPerfil></ion-img>
+                <ion-avatar >
+                  <ion-img class="user-avatar" routerLink="/perfil/{{publicacion.idPersona}}" [src]=publicacion.imagenPerfil></ion-img>
                 </ion-avatar>
               </ion-col>
               <ion-col size="10">
