--- a/src/app/UI/feed-home/pub-ee/pub-ee.component.html
+++ b/src/app/UI/feed-home/pub-ee/pub-ee.component.html
@@ -1,7 +1,9 @@
 <ion-card *ngIf="publicacion.tipo.tipo === 'enlaceExterno'">
   <ion-card-header>
-    <ion-card-title [innerHtml]="preview.title"></ion-card-title>
+    <a [href]="preview.url">
+      <ion-card-title [innerHtml]="preview.title"></ion-card-title>
     <img [src]="preview.image">
+    </a>
   </ion-card-header>
   <ion-card-content [innerHtml]="preview.description"></ion-card-content>
 </ion-card>
