--- a/src/app/UI/feed/pub-mapa-ee/pub-mapa-ee.component.html
+++ b/src/app/UI/feed/pub-mapa-ee/pub-mapa-ee.component.html
@@ -1,7 +1,9 @@
 <ion-card *ngIf="publicacion.tipo.tipo === 'enlaceExterno'">
   <ion-card-header>
+    <a [href]="preview.url">
     <ion-card-title [innerHtml]="preview.title"></ion-card-title>
     <img [src]="preview.image">
+  </a>
   </ion-card-header>
   <ion-card-content [innerHtml]="preview.description"></ion-card-content>
 </ion-card>
