--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -110,7 +110,7 @@
     </ion-card-header>
     <ion-grid class="unpaddingX unpaddingX-cols">
       <ion-row>
-        <ion-col size="12">
+        <ion-col style="text-align: center;" size="12">
           <img [src]="evento.imagen" *ngIf="evento.imagen" class="full-width main-image"/>
         </ion-col>
       </ion-row>
